fix: transition mobile menu toggle

--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,7 @@ body {
     height: 1px;
     background-color: #fff;
     width: 100%;
+    transition: transform 0.2s;
   }
   .mobile-menu-line:nth-child(2) {
     width: 80%;
